co-author: Phan Trần Khanh, Phú, changed a bit of login and signup page to not able to return when we already signed in, also changed the post a recipe page, added user avatar image at profile page

--- a/Cooking_app/static/css/post_a_recipe/main.css
+++ b/Cooking_app/static/css/post_a_recipe/main.css
@@ -93,6 +93,11 @@
   font-size: 17px;
 }
 
+.name-subsections{
+  margin-top: 10px;
+  font-size: 15px;
+}
+
 .flex-container{
   display: flex;
   flex-direction: column;
@@ -170,3 +175,7 @@
   opacity: 1;
 }
 
+
+.country:focus{
+  outline: none;
+}
