Add forgot password

--- a/Cooking_app/templates/forgot_password.html
+++ b/Cooking_app/templates/forgot_password.html
@@ -35,13 +35,14 @@
         method="POST"
     >
       {% csrf_token %}
-      <input id = "email" 
+      {{ form.as_p }}
+      <!-- <input id = "email" 
             name = "email" 
             type="email"
             placeholder="Email"
             class="input-template"
             value="{{ email }}"
-      >
+      > -->
       
       <button id = "next-btn" class = "btn-template">
         Next
