--- a/Cooking_app/templates/forgot_password2.html
+++ b/Cooking_app/templates/forgot_password2.html
@@ -20,6 +20,8 @@
   >
     <img class = "forgot-password-icon" src="{% static '/images/padlock.png' %}" alt="">
     <div style="height: 10px;"></div>
+
+    {% if validlink %}
     <p style=
     "
     font-size: 25px;
@@ -28,10 +30,12 @@
       New password
     </p>
 
-    <form action="/login.html"
-          class="form-template"
+    <form class="form-template"
+          method="POST"
     >
-      <input id = "password" 
+      {% csrf_token %}
+      {{ form.as_p }}
+      <!-- <input id = "password" 
             name = "password" 
             type="password" 
             placeholder="New password"
@@ -44,12 +48,16 @@
             type="password" 
             placeholder="Re-enter the password"
             class="input-template"
-      >
+      > -->
 
       <button id = "verify-btn" class = "btn-template">
         Finish
       </button>
     </form>
+    {% else %}
+      <p>The password reset link was invalid, possibly because it has
+      already been used. Please request a new password reset.</p>
+    {% endif %}
     
     <a id = "back-to-login" href="{% url 'login' %}">
       Back to login
