--- a/Cooking_app/templates/index.html
+++ b/Cooking_app/templates/index.html
@@ -275,7 +275,7 @@
       </a>
 
       <div id = "another-text">
-        Or you can find your favourite down here
+        Or you can find your favorite down here
       </div>
       <p style="
                 font-size: 40px;
@@ -554,10 +554,10 @@
 
         </div>
 
-        <!-- Contries -->
+        <!-- Countries -->
     <div id = "country-posts-preview">
       <p>
-        Contries
+        Countries
       </p>
       <div id = "recipes-of-countries">
         <div class = "recipes-of-countries-container">
@@ -929,11 +929,7 @@
   }
 
   function PostARecipe(){
-    
-      window.location.href = "{% url 'post_a_recipe' %}";
-      
-    
-
+    window.location.href = "{% url 'post_a_recipe' %}";
   }
   
 </script>
