--- a/Cooking_app/templates/post_a_recipe.html
+++ b/Cooking_app/templates/post_a_recipe.html
@@ -327,7 +327,7 @@
             <span> More </span>
           </button>
 
-          <p class="name-sections">Intructions</p>
+          <p class="name-sections">Instructions</p>
           <div id="instructions" class="flex-container">
             <textarea
               name="instruction0"
@@ -366,7 +366,7 @@
             style="margin-top: 10px"
           />
 
-          <p class="name-sections">Catergory</p>
+          <p class="name-sections">Category</p>
 
           <select 
           style = "
