added ability to view other user profile (PROBLEMS: they can also change the information on the user), added the ability to list out the Post that the user made in his profile (may expand this into index.html) -> up next: we need to talk again about how to name the variable, can'

--- a/Cooking_app/templates/post_a_recipe.html
+++ b/Cooking_app/templates/post_a_recipe.html
@@ -254,7 +254,7 @@
         <p id="feel-free-to-share-p">Feel free to share it!</p>
 
         <p style="height: 30px"></p>
-        <form method="POST" id="form-recipe" action="">
+        <form method="POST" id="form-recipe" action="" enctype="multipart/form-data">
           {% csrf_token %}
           <input
             name="title-recipe"
