--- a/Cooking_app/templates/post_a_recipe.html
+++ b/Cooking_app/templates/post_a_recipe.html
@@ -254,7 +254,7 @@
         <p id="feel-free-to-share-p">Feel free to share it!</p>
 
         <p style="height: 30px"></p>
-        <form method="POST" id="form-recipe" action="">
+        <form method="POST" id="form-recipe" action="" enctype="multipart/form-data">
           {% csrf_token %}
           <input
             name="title-recipe"
@@ -358,6 +358,7 @@
 
           <p class="name-sections">Upload image</p>
 
+          
           <input
             type="file"
             name="result-img"
@@ -365,6 +366,7 @@
             accept="image/*"
             style="margin-top: 10px"
           />
+          
 
           <p class="name-sections">Category</p>
 
