--- a/Cooking_app/templates/index.html
+++ b/Cooking_app/templates/index.html
@@ -224,7 +224,7 @@
     <div id = "Search-Post-Main">
       <span id = "welcome😄">Welcome &#127834; &#127835; &#127857;</span>
       <!-- Searching Form -->
-      <form action="/search.html">
+      <form action="" method="GET">
         <input id = "search-main" 
               name = "search-main"
               type="text" 
