--- a/Cooking_app/static/css/post_a_recipe/main.css
+++ b/Cooking_app/static/css/post_a_recipe/main.css
@@ -47,7 +47,6 @@
 #form-recipe{
   display: flex;
   flex-direction: column;
-
 }
 .input-recipe{
   width: 250px;
@@ -64,7 +63,7 @@
   width: 250px;
   border: 1px solid black;
   border-radius: 10px;
-  padding: 3.5px 15px;
+  padding: 5px 15px;
   margin: 5px 0;
   resize: none;
   transition: all .3s;
@@ -101,7 +100,6 @@
 .flex-container{
   display: flex;
   flex-direction: column;
-
 }
 
 
@@ -178,4 +176,10 @@
 
 .country:focus{
   outline: none;
+}
+
+.max-text{
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
