--- a/Cooking_app/static/css/profile/main.css
+++ b/Cooking_app/static/css/profile/main.css
@@ -751,7 +751,7 @@ input:focus{
 .img-recipe-small-preview{
   min-width: 100px;
   max-width: 100px;
-  width: 100px
+  width: 100px;
   min-height: 100px;
   max-height: 100px;
 }
