--- a/Cooking_app/templates/index.html
+++ b/Cooking_app/templates/index.html
@@ -202,8 +202,7 @@
               <img class = "profile-header" onclick="displayDropdown()" src="{{user.avatar.url}}" alt="">
               <div id="my-dropdown" class="dropdown-content">
                 <a href="{% url 'profile' request.user.username %}">Profile</a>
-                <a href="{% url 'profile' request.user.username %}">Saved Recipes</a>
-                <a href="{% url 'profile' request.user.username %}">Settings</a>
+                <a href="{% url 'post_a_recipe' %}">Post recipe</a>
                 <a href="{% url 'logout' %}" 
                     onclick="return logout();"
                 >
