--- a/Cooking_app/templates/search.html
+++ b/Cooking_app/templates/search.html
@@ -58,11 +58,10 @@
           <img class = "profile-header" onclick="displayDropdown()" src="{% static '/icons/user.png' %}" alt="">
           <div id="my-dropdown" class="dropdown-content">
             <a href="{% url 'profile' %}">Profile</a>
-              <a href="{% url 'profile' %}">Saved Recipes</a>
-              <a href="{% url 'profile' %}">Settings</a>
-              <a href="{% url 'login' %}" 
-                  onclick="return logout();"
-              >
+            <a href="{% url 'post_a_recipe' %}">Post recipe</a>
+            <a href="{% url 'login' %}" 
+                onclick="return logout();"
+            >
                   Log out
               </a>
           </div>
