--- a/Cooking_app/templates/index.html
+++ b/Cooking_app/templates/index.html
@@ -35,19 +35,23 @@
     <div class = "sidebar-main"> 
 
       <div id = "container-0">
-        <div style="visibility: {% if user %} hidden {% else %} visible {% endif %};" id = "container-00">
+        {% if not request.user.is_authenticated %}
+        <div style="visibility:   visible ;" id = "container-00">
           <button type="button" id = "JoinUsButton" onclick="login()">
             <span>
               Join Us
             </span>
           </button>
         </div>
-        <div style="visibility: {% if user %} visible {% else %} hidden {% endif %};" id = "container-01">
-          <a href="{% url 'profile' request.user.username %}">
-            <img src="{{user.avatar.url}}" alt="">
-            <p>{{request.user.username}}</p>
+        {% else %}
+        <div style="visibility:  visible ;" id = "container-01">
+          
+          <a href="{% url 'profile' request.user.username  %}">
+            <img src="{{user.userinfo.avatar.url}}" alt="">
+            <p>{{user.username}}</p>
           </a>
         </div>
+        {% endif %}
       </div>
 
       <p style="min-height: 10px;"></p>
@@ -185,8 +189,8 @@
       </div>
 
       <div id = "right-header">
-        
-          <div style=" visibility: {% if user  %} hidden {% else %} visible {% endif %}; " 
+          {% if not request.user.is_authenticated %}
+          <div style=" visibility:  visible; " 
           id = "container-10">
             <button id = "JoinUsButton2" onclick="login()">
               <span>
@@ -194,28 +198,30 @@
               </span>
             </button>
           </div>
-      
-          <div style=" visibility: {% if user %} visible {% else %} hidden {% endif %}" id = "container-11">
+          {% else %}
+          <div style=" visibility:  visible;" id = "container-11">
             
             <div class = "dropdown">
-              <span class = "username-header" onclick="displayDropdown()"> {{user.user.username}}</span>
-              <img class = "profile-header" onclick="displayDropdown()" src="{{user.avatar.url}}" alt="">
+              <span class = "username-header" onclick="displayDropdown()"> {{user.username}}</span>
+              <img class = "profile-header" onclick="displayDropdown()" src="{{user.userinfo.avatar.url}}" alt="">
               <div id="my-dropdown" class="dropdown-content">
-                <a href="{% url 'profile' request.user.username %}">Profile</a>
+                
+                <a href="{% url 'profile' user.username %}">Profile</a>
+                {% comment %} 
                 <a href="{% url 'profile' request.user.username %}">Saved Recipes</a>
-                <a href="{% url 'profile' request.user.username %}">Settings</a>
+                <a href="{% url 'profile' request.user.username %}">Settings</a> 
+                {% endcomment %}
                 <a href="{% url 'logout' %}" 
                     onclick="return logout();"
                 >
                     Log out
                 </a>
+
               </div>
             </div>
             
           </div>
-        
-          
-
+          {% endif %}
       </div>
 
     </header> 
