--- a/Cooking_app/templates/profile.html
+++ b/Cooking_app/templates/profile.html
@@ -676,7 +676,7 @@
             <input type="text" placeholder="Search" class = "search-input">
             <img src="{% static '/icons/search.png' %}" alt="">
           </div>
-
+          {% for key in user_post %}
           <div id = "saved-recipes-container">
             <div id = "saved-recipe1" class = "recipe-container">
               <a href="#" class = "img-recipe-small-preview">
@@ -693,11 +693,11 @@
                 </div>
               </div>
               <div class = "saved-recipe-checkbox">
-                <input type="checkbox" id="saved-recipes-checkbox" name="saved-recipes-checkbox" />
-                <label for="saved-recipes-checkbox"></label>
+                <input type="checkbox" id="saved-recipes-checkbox-{{key}}" name="saved-recipes-checkbox" />
+                <label for="saved-recipes-checkbox-{{key}}"></label>
               </div>
             </div>
-
+            {% endfor %}
             
           </div>
 
