--- a/Cooking_app/templates/verify.html
+++ b/Cooking_app/templates/verify.html
@@ -9,8 +9,8 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300;400;500;600&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,300&family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{% '/css/forgot_password/general.css' %}">
-  <link rel="stylesheet" href="{% '/css/forgot_password/main.css' %}">
+  <link rel="stylesheet" href="{% static '/css/forgot_password/general.css' %}">
+  <link rel="stylesheet" href="{% static '/css/forgot_password/main.css' %}">
 
   <title>Forgot Password</title>
 </head>
@@ -18,13 +18,27 @@
   <main
   style="justify-content: center;"
   >
-    <img class = "forgot-password-icon" src="{% '/images/mail.png' %}" alt="">
+    <img class = "forgot-password-icon" src="{% static '/images/mail.png' %}" alt="">
     <div style="height: 10px;"></div>
-    <p class = "text2">
-      To initiate the password reset process for your <a href="https://mail.google.com/mail/u/0/#inbox">EMAIL</a> Django Registration/Login App Account, please check your email.
+    <p class = "text1">
+      We sent a password reset code to Luongthanhhoangphu2002@gmail.com
     </p>
-    <div style = "height: 30px;">
-    </div>
+
+    <form action="/forgot_password2.html"
+          class="form-template"
+    >
+      <input id = "reset-code" 
+      name = "reset-code" 
+      type="text" 
+      placeholder="Code"
+      class="input-template"
+      value="{{ code }}"
+      >
+
+      <button id = "verify-btn" class = "btn-template">
+        Verify
+      </button>
+    </form>
 
     <div id = "resend-code-div">
       <p style="color: rgb(96, 96, 96);">Didn't receive the email?</p>
